# UC3M_StatisticalPhysics_LAB

./: pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
docs/source/: conf.py
src/lab/: binary_computation.py  main.ipynb  main.py  permutation.py  tempCodeRunnerFile.py
