[metadata]
name = lab
version = 0.0.1
author = Author
author_email = author_email
description = description  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LuisGMM/Template
project_urls =
    Bug Tracker = https://github.com/LuisGMM/Template/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    lab
install_requires =
    numpy
python_requires = >=3.9
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov 
    mypy 
    flake8

[options.package_data]
lab = py.typed

[flake8]
max-line-length = 160

[tool:pytest]
norecursedirs =
    docs
