[metadata]
name = Template
version = 0.0.1
author = Author
author_email = author_email
description = description  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LuisGMM/Template
project_urls =
    Bug Tracker = https://github.com/LuisGMM/Template/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    numericalmethods
install_requires =    
    numpy >= 1.21.5
python_requires = >=3.7
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest >= 6.0
    pytest-cov >= 2.0
    mypy >= 0.910
    flake8 >= 3.9
    tox >= 3.24
docs =
    myst_nb              == 0.9.0
    sphinx               == 2.4
    sphinx-autoapi       == 1.4.0
    sphinx_rtd_theme     == 0.5.0rc1
    sphinx-notfound-page == 0.5

[options.package_data]
template = py.typed

[flake8]
max-line-length = 160

[metadata]
name = template

[tool:pytest]
norecursedirs =
    docs
